# Screen-Translation-Assistant

./: .gitignore  AGENTS.md  README_DEV.md  _test.ts  index.html  package-lock.json  package.json  patch.diff  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
config/: glossary.zh-CN.json
contracts/: api.contract.v5.json
database/: schema.sql
docs/: next-steps-and-data-policy.zh-CN.md  windows-desktop-setup.zh-CN.md
fixtures/: error_cases.sample.json  ocr_blocks.sample.json  translation_response.sample.json
scripts/: check_desktop_env.ps1  check_node_version.mjs  check_winget.ps1  collect_diagnostics.ps1  dev_windows.ps1  install_argos_package.ps1  install_argos_package.py  install_desktop_prereqs.ps1  local_flow_test.py  local_services_status.ps1  open_desktop_prereq_pages.ps1  package_windows_dev.ps1  prepare_tauri_dev.ps1  real_machine_test.ps1  reset_local_state.ps1  run_acceptance_mock.py  run_vite_compat.ps1  smoke_check.py  start_local_sidecar.ps1  start_ocr_mock.ps1  start_sidecar_if_needed.ps1  start_vite_if_needed.ps1  stop_local_services.ps1  test_local_flow.ps1  v4_self_check.py  v5_validate_project.py
sidecars/ocr_service/: main.py  requirements-local.txt  requirements.txt
src/: App.tsx  App_bak.tsx  core.ts  mock.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: capture.rs  commands.rs  contracts.rs  cost_control.rs  db.rs  diagnostics.rs  error_codes.rs  hotkeys.rs  main.rs  overlay.rs  privacy.rs  screen_geometry.rs  settings.rs  translation.rs
src/components/: HistoryPage.tsx  (+7 more)
(+9 files in other folders)
